// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Loaders Basic loader 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="SimpleLoaderstyle__Wrapper-k848hg-1 hxCcLj"
    >
      <img
        alt="Loading..."
        class="SimpleLoaderstyle__AnimatedImg-k848hg-0 kNPPPV"
        height="50"
        src="file-stub"
        width="50"
      />
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Loaders
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            Basic loader
          </h2>
        </div>
        <div
          style="margin-bottom:0"
        >
          <div
            style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-size:15px"
          >
            A simple loader without any frills
          </div>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="display:flex;justify-content:space-between;align-items:center;font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div
                style="padding-left:18px;padding-right:3px"
              >
                <span
                  style="color:#444"
                >
                  &lt;SimpleLoader
                </span>
                <span />
                <span
                  style="color:#444"
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              style="background-color:rgb(255, 255, 255);cursor:pointer;font-size:13px;align-self:flex-start;flex-shrink:0;overflow:hidden;border-width:1px;border-style:solid;border-color:rgb(238, 238, 238);border-image:initial;border-radius:3px;padding:3px 10px"
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "SimpleLoader" Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    property
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    propType
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    required
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    default
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    width
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      number
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      50
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    height
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      number
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      50
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    centered
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      bool
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      false
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Loaders Centered 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="SimpleLoaderstyle__Wrapper-k848hg-1 jiBiuB"
    >
      <img
        alt="Loading..."
        class="SimpleLoaderstyle__AnimatedImg-k848hg-0 kNPPPV"
        height="50"
        src="file-stub"
        width="50"
      />
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Loaders
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            Centered
          </h2>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="display:flex;justify-content:space-between;align-items:center;font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div
                style="padding-left:18px;padding-right:3px"
              >
                <span
                  style="color:#444"
                >
                  &lt;SimpleLoader
                </span>
                <span>
                  <span>
                     
                    <span>
                      centered
                    </span>
                     
                  </span>
                </span>
                <span
                  style="color:#444"
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              style="background-color:rgb(255, 255, 255);cursor:pointer;font-size:13px;align-self:flex-start;flex-shrink:0;overflow:hidden;border-width:1px;border-style:solid;border-color:rgb(238, 238, 238);border-image:initial;border-radius:3px;padding:3px 10px"
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "SimpleLoader" Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    property
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    propType
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    required
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    default
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    width
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      number
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      50
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    height
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      number
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      50
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    centered
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      bool
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      false
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Loaders Loader with custom size 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="SimpleLoaderstyle__Wrapper-k848hg-1 hxCcLj"
    >
      <img
        alt="Loading..."
        class="SimpleLoaderstyle__AnimatedImg-k848hg-0 gHObTW"
        height="100"
        src="file-stub"
        width="100"
      />
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Loaders
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            Loader with custom size
          </h2>
        </div>
        <div
          style="margin-bottom:0"
        >
          <div
            style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-size:15px"
          >
            Loader with a set width and height
          </div>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="display:flex;justify-content:space-between;align-items:center;font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div
                style="padding-left:18px;padding-right:3px"
              >
                <span
                  style="color:#444"
                >
                  &lt;SimpleLoader
                </span>
                <span>
                  <span>
                     
                    <span>
                      width
                    </span>
                    <span>
                      =
                      <span>
                        {
                        <span
                          style="color:#a11"
                        >
                          100
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span>
                      height
                    </span>
                    <span>
                      =
                      <span>
                        {
                        <span
                          style="color:#a11"
                        >
                          100
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style="color:#444"
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              style="background-color:rgb(255, 255, 255);cursor:pointer;font-size:13px;align-self:flex-start;flex-shrink:0;overflow:hidden;border-width:1px;border-style:solid;border-color:rgb(238, 238, 238);border-image:initial;border-radius:3px;padding:3px 10px"
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "SimpleLoader" Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    property
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    propType
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    required
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    default
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    width
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      number
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      50
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    height
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      number
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      50
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    centered
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      bool
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      false
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
